--- a/guts/css/style.scss
+++ b/guts/css/style.scss
@@ -419,7 +419,7 @@ a.dropdown-item, button.dropdown-item {
   }
 }
 
-.show_invoiced .task_col_1::after {
+.show_invoiced .task_col_1::after, .show_invoicereminder .task_col_1::after {
   content: "";
   display: block;
   position: absolute;
@@ -432,6 +432,10 @@ a.dropdown-item, button.dropdown-item {
   border-radius: 50%;
   border: 1px solid white;
   line-height: 1;
+}
+.show_invoicereminder .task_col_1::after {
+  color:rgb(255, 217, 66);
+  content: "";
 }
 
 // .heat_0, .heat_1, .heat_2, .heat_3, .heat_4
@@ -557,7 +561,6 @@ a.dropdown-item, button.dropdown-item {
 .daterangepicker.show-calendar .drp-buttons {
   display: flex;
   flex-direction: row;
-  flex-gap: 8px;
   gap: 8px;
 
   button {
@@ -688,22 +691,15 @@ select {
 }
 
 @media (min-width: 1400px) {
-  root: {
+  :root {
     font-size: 1.1rem;
-  };
-}
-
-@media (max-width: 1200px) {
-  .task_project {
-    //white-space: normal
- 
   }
 }
 
 @media (max-width: 800px) {
-  root: {
+  :root {
     font-size: 0.75rem;
-  };
+  }
 
   .nav .logo {
     max-width: 70px;
@@ -716,7 +712,7 @@ select {
   .day_header {
     padding-left: #{$column-gap * 5};
   }
-
+  
   .table_col {
     padding: #{$column-gap * 0.75} 2px #{$column-gap * 1} 2px;
 
@@ -727,11 +723,6 @@ select {
 
     &.task_col_2 {
       width: 22ch;
-    }
-
-    &.task_col_3 {
-      //width: 100%
-   
     }
 
     &.task_col_4 {
